<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".Fragments.ProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:id="@+id/layout"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:text="@string/app_name"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_margin="8dp"
            android:textColor="@color/black"
            android:layout_height="wrap_content"/>


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            app:cardCornerRadius="10dp"
            android:layout_margin="10dp"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:weightSum="7"
                android:background="@color/white"
                android:layout_height="50dp">

                <ImageView
                    android:layout_width="0dp"
                    android:src="@drawable/star"
                    android:layout_weight="1"
                    android:padding="10dp"
                    android:layout_height="50dp"
                    android:contentDescription="@string/todo" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:text="@string/star"
                    android:textColorHint="#000"
                    android:gravity="center"
                    android:textColor="#000"
                    android:textSize="15sp"
                    android:lines="1"
                    android:background="@null"
                    android:shadowColor="@color/white"
                    android:id="@+id/editSearch"
                    android:layout_weight="5" />


                <ImageView
                    android:layout_width="0dp"
                    android:src="@drawable/settings"
                    android:layout_weight="1"
                    android:background="@drawable/selector_white"
                    android:padding="10dp"
                    android:id="@+id/settings"
                    android:layout_height="50dp"
                    android:contentDescription="@string/todo" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="match_parent"
            android:text="@string/save"
            android:textStyle="bold"
            android:textSize="18sp"
            android:paddingStart="10dp"
            android:textColor="@color/black"
            android:layout_height="wrap_content"
            tools:ignore="RtlSymmetry" />

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:id="@+id/recyclerView"
            android:layout_marginTop="5dp"
            android:layout_height="match_parent"/>


    </LinearLayout>

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_centerInParent="true"
        android:id="@+id/progressBar"
        android:layout_height="wrap_content"/>


</RelativeLayout>