<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:id="@+id/rela"
    tools:context=".Fragments.MarketFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:id="@+id/layout"
        android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:text="@string/app_name"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_margin="8dp"
                android:textColor="@color/black"
                android:layout_height="wrap_content"/>


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            app:cardCornerRadius="10dp"
            android:layout_margin="10dp"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:weightSum="7"
                android:background="@color/white"
                android:layout_height="50dp">

                <ImageView
                    android:layout_width="0dp"
                    android:src="@drawable/search_black"
                    android:layout_weight="1"
                    android:padding="10dp"
                    android:layout_height="50dp"
                    android:contentDescription="@string/todo" />

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:hint="@string/market_bul"
                    android:textColorHint="#000"
                    android:textColor="#000"
                    android:textSize="15sp"
                    android:lines="1"
                    android:background="@null"
                    android:shadowColor="@color/white"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:id="@+id/editSearch"
                    android:layout_weight="4" />


                <ImageView
                    android:layout_width="0dp"
                    android:src="@drawable/close"
                    android:layout_weight="1"
                    android:padding="10dp"
                    android:visibility="invisible"
                    android:id="@+id/close"
                    android:layout_height="50dp"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:tag="search"
                    android:textStyle="bold"
                    android:background="@drawable/selector_white"
                    android:textColor="@color/pink"
                    android:id="@+id/textSearch"
                    android:layout_gravity="center"
                    android:text="@string/ara"/>
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:id="@+id/recyclerView"
            android:layout_height="match_parent"/>

    </LinearLayout>

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_centerInParent="true"
        android:id="@+id/progressBar"
        android:layout_height="wrap_content"/>

</RelativeLayout>